changes text  inside of transportation

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 Unlike many other species, humans have developed a wide range of transportation methods 
                 tailored to the unique environments in which they live. In regions characterized by large bodies 
                 of water or intricate canal systems, boats become a vital means of travel. Conversely, 
-                in densely populated urban areas like San Francisco, public transit systems such as buses and trams are a common sight,
-                 efficiently carrying people through bustling city streets. The diversity in transportation methods that humans have created is a testament to our
+                in densely populated urban areas like San Francisco, public transit systems such as buses and other forms of public transportation are common,
+                 efficiently carrying people through city streets. The diversity in transportation methods that humans have created is a testament to our
                  ingenuity and ability to adapt to the many challenges posed by different environments. 
             </p>
             <img class ="cultural-picture" src="https://www.dropbox.com/s/5fsb567icorp8dn/bus.jpg?raw=1" alt="Image description">
