--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <div class="introduction">
         <h1 class="intro-title">Human Adaptations</h1>
         <p class="intro-text">
-            Genetic Adaptation refers to the change in biological characteristics in a species over long periods of time
-            due to the species' environment. The point of these changes is to aid the species to 
-            survive better and more safely reproduce. This website will take a look at some of the more common and most important adptations for humans.
-             The types of adaptations will be divided into two sections: Genetic and Cultural adaptations
+            Adaptations are present in every modern species on this planet. Typically they refer to genetic or, biological, adaptations. These adaptations occur within species' genetics. However,
+            There is also another form of adaptation that is exclusive to human-kind. Thesee are known as cultural adaptations. As you explore this website you will find the differences between the two
+            as well as some examples.
         </p>
             
     </div>
