--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             <ul class="nav-links">
                 <li>Genetic Adaptations</li>
                 <li>Cultural Adaptations</li>
-                <li>How do they compare?</li>
             </ul>
         </nav>
     </header>    
@@ -26,7 +25,7 @@
         </p>
             
     </div>
-    <div class="genetic-adaptation-details">
+    <div class="genetic-adaptation">
         <h1 class="adaptation-header">Genetic Adaptations</h1>
         <p class="genetic-adaptation-intro">
             Genetic adaptations are present in all species as an evolutionary response. Genetic adaptation happens in populations and occurs over several generations. The
@@ -57,7 +56,7 @@
         </div>
     </div>
     
-    <div class="cultural-adaptation-details">
+    <div class="cultural-adaptation">
         <h1 class="adaptation-header">Cultural Adaptations</h1>
         <p class="cultural-adaptation-intro">
             Cultural adaptations, unlike genetic adaptations, are unique to only humans and are how humans respond to their environment non-physiologically. These adaptations are not rooted in our DNA, but rather in shared knowledge, beliefs, and behaviors. Cultural adaptations can significantly enhance survival and reproduction, much like their genetic counterparts. However, in contrast to genetic changes, cultural adaptations can be deliberately implemented, can occur within a single generation, and are reversible or modifiable over time. 
