--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <header>
         <h1 class="header-text">Anthropology UnEssay</h1>
         <h1 class="name">Nyles Randall</h2>
-        <nav>
-            <ul class="nav-links">
-                <li>Genetic Adaptations</li>
-                <li>Cultural Adaptations</li>
-            </ul>
-        </nav>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="#genetic-adaptations">Genetic Adaptations</a></li>
+                    <li><a href="#cultural-adaptations">Cultural Adaptations</a></li>
+                </ul>
+            </nav>
     </header>    
     <div class="introduction">
         <h1 class="intro-title">Human Adaptations</h1>
@@ -25,7 +25,7 @@
         </p>
             
     </div>
-    <div class="genetic-adaptation">
+    <div class="genetic-adaptation" id="genetic-adaptations">
         <h1 class="adaptation-header">Genetic Adaptations</h1>
         <p class="genetic-adaptation-intro">
             Genetic adaptations are present in all species as an evolutionary response. Genetic adaptation happens in populations and occurs over several generations. The
@@ -35,7 +35,8 @@
         <div class="genetic-adaptation-examples">
             <h3>UV Radiation</h3>
             <p>
-                Humans have developed varying skin pigmentation as a result of exposure to UV radiation. Darker skin, rich in melanin, protects against the harmful effects of UV radiation, including skin cancer and folate degradation, and is prevalent in areas closer to the equator with high UV levels.
+                Humans have developed varying skin pigmentation as a result of exposure to UV radiation. Darker skin, rich in melanin, protects 
+                against the harmful effects of UV radiation, including skin cancer and folate degradation, and is prevalent in areas closer to the equator, which naturally have higher UV levels.
             </p>
             <img class ="genetic-picture" src="https://www.dropbox.com/s/petlrw0rhdmmvvk/UVPicture.png?raw=1" alt="Image description">
             <h3>Body Hair</h3>
@@ -56,7 +57,7 @@
         </div>
     </div>
     
-    <div class="cultural-adaptation">
+    <div class="cultural-adaptation" id="cultural-adaptations">
         <h1 class="adaptation-header">Cultural Adaptations</h1>
         <p class="cultural-adaptation-intro">
             Cultural adaptations, unlike genetic adaptations, are unique to only humans and are how humans respond to their environment non-physiologically. These adaptations are not rooted in our DNA, but rather in shared knowledge, beliefs, and behaviors. Cultural adaptations can significantly enhance survival and reproduction, much like their genetic counterparts. However, in contrast to genetic changes, cultural adaptations can be deliberately implemented, can occur within a single generation, and are reversible or modifiable over time. 
